<?xml version="1.0"?>
<package format="2">
  <name>tfoi_data_publisher</name>
  <version>0.0.0</version>
  <description>The tfoi_data_publisher package</description>

  <maintainer email="tfoi@todo.todo">tfoi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  

  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf_conversions</build_depend>
  <!-- <build_depend>cv_bridge</build_depend> -->
  <build_depend>opencv2</build_depend>

  <build_depend>message_generation</build_depend> 
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
